--- a/P/0/0.Rmd
+++ b/P/0/0.Rmd
@@ -180,7 +180,7 @@ class: animated, fadeIn
 
 - __1\.__ Create groups of 3-4 people
 
-Make groups of 3-4students to work on the home assignments projects.
+Make groups of 3-4 students to work on the home assignments projects.
 
 - __2\.__ Enroll in ATENeA
 
@@ -194,9 +194,19 @@ class: animated, fadeIn
 Basic knowledge in R and familiarity with RStudio are prerequisites.
 
 --
-<center>
-<img src="img/kahoot.jpg" width=500/>
+
+.pull-left[<center>
+<img src="img/descarga.png" width=500/>
 </center>
+]
+
+.pull-right[
+1. Go to https://wooclap.com
+
+2. Introduce the event code: **BJMEAL**
+
+3. Login (SSO) with ATENeA
+]
 
 ---
 layout: false
@@ -231,7 +241,7 @@ class: animated, fadeIn
 
 - Interactive code-based `R`
 
-<font color="#A8A8A8">Rstudio (Jupyter Notebook, and other computer languages)</font>
+  <font color="#A8A8A8">RStudio (Jupyter Notebook, and other computer languages)</font>
 
 --
 
@@ -691,6 +701,7 @@ class: animated, fadeIn
 - `?read.table`, `?str`, `?as.factor`
 - Press F1 (in RStudio)
 - [Stack Overflow](https://stackoverflow.com) ([`R`](https://stackoverflow.com/questions/tagged/r), [`ggplot2`](https://stackoverflow.com/questions/tagged/ggplot2))
+- ChatGPT
 - Ask your classmates or your teacher
 
 ---
