--- a/T/0/0.Rmd
+++ b/T/0/0.Rmd
@@ -18,7 +18,7 @@ output:
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 # Animations: https://github.com/daneden/animate.css#animations
-knitr::opts_chunk$set(echo = FALSE, eval = TRUE, fig.width = 4.5, fig.height = 3.5, fig.show = 'hold', message = FALSE, warning = F)
+knitr::opts_chunk$set(echo = FALSE, eval = TRUE, fig.width = 4.5, fig.height = 3.5, fig.show = 'hold', message = FALSE, warning = F, dpi = 300,  fig.retina = 3)
 # Package for slides
 # remotes::install_github('yihui/xaringan')
 
@@ -830,7 +830,7 @@ Chart that encodes information using hue - <small>Dataset of 32 cars that were t
 ##### Credit: John Rauser
 .pull-left[
 <center>
-<img src="img/Diapositiva12020_9_22D12_51_57.PNG">
+<img src="img/Diapositiva12020_9_22D12_51_57.png">
 </center>
 Chart that encodes information using hue - <small>Dataset of 32 cars that were tested in a 1974 issue of Motor Trend magazine. Fuel efficiency in miles per gallon or mpg</small>.   
 
@@ -849,7 +849,7 @@ The first Cleveland's estimation task is **discrimination**:
 
 .pull-left[
 <center>
-<img src="img/Diapositiva22020_9_22D12_52_22.PNG">
+<img src="img/Diapositiva22020_9_22D12_52_22.png">
 </center>
 Chart that encodes information using hue - <small>Dataset of 32 cars that were tested in a 1974 issue of Motor Trend magazine. Fuel efficiency in miles per gallon or mpg</small>.   
 
@@ -868,7 +868,7 @@ The first Cleveland's estimation task is **discrimination**:
 
 .pull-left[
 <center>
-<img src="img/Diapositiva32020_9_22D12_52_47.PNG">
+<img src="img/Diapositiva32020_9_22D12_52_47.png">
 </center>
 Chart that encodes information using hue - <small>Dataset of 32 cars that were tested in a 1974 issue of Motor Trend magazine. Fuel efficiency in miles per gallon or mpg</small>.    
 
@@ -891,7 +891,7 @@ The second Cleveland's estimation task is **ranking**:
 
 .pull-left[
 <center>
-<img src="img/Diapositiva32020_9_22D12_52_47.PNG">
+<img src="img/Diapositiva32020_9_22D12_52_47.png">
 </center>
 Chart that encodes information using hue - <small>Dataset of 32 cars that were tested in a 1974 issue of Motor Trend magazine. Fuel efficiency in miles per gallon or mpg</small>.    
 
