--- a/P/0/0.Rmd
+++ b/P/0/0.Rmd
@@ -18,7 +18,7 @@ output:
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 # Animations: https://github.com/daneden/animate.css#animations
-knitr::opts_chunk$set(echo = FALSE, eval = TRUE, fig.width = 4.5, fig.height = 3.5, fig.show = 'hold', message = FALSE, dpi = 300,  fig.retina = 3)
+knitr::opts_chunk$set(echo = FALSE, eval = TRUE, fig.width = 4.5, fig.height = 3.5, fig.show = 'hold', message = FALSE, fig.retina = 3)
 
 library(ggplot2)
 library(lattice)
@@ -836,7 +836,7 @@ long_df <- pivot_longer(
   values_to = "value"
   )
 ## check dimensions
-dim(data_tidy)
+dim(long_df)
 dim(data)
 
 
