--- a/P/1/P1_slides.Rmd
+++ b/P/1/P1_slides.Rmd
@@ -1,13 +1,13 @@
 ---
-title: "**P1** | Basic tools for data visualization"
+title: "P1 | Basic tools for data visualization"
 subtitle: "Introduction"
 author: "<b>Marta Coronado Zamora and Miriam Merenciano</b>"
-date: "20 September 2024"
+date: "19 February 2026"
 output:
   xaringan::moon_reader:
-    css: ["default", "rutgers", "metropolis-fonts", "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css", "https://use.fontawesome.com/releases/v5.10.1/css/all.css"]
+    css: [xaringan-themer.css, rutgers, "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css", "https://use.fontawesome.com/releases/v7.0.0/css/all.css"]    
     lib_dir: libs
-    self_contained: yes
+    self_contained: true
     nature:
       highlightStyle: github
       highlightLines: true
@@ -18,7 +18,7 @@ output:
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
 # Animations: https://github.com/daneden/animate.css#animations
-knitr::opts_chunk$set(echo = FALSE, eval = TRUE, fig.width = 4, fig.height = 3.5, fig.show = 'hold', message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, eval = TRUE, fig.width = 4, fig.height = 3.5, fig.show = 'hold', message = FALSE, warning = F,  fig.retina = 3)
 library(ggplot2)
 library(lattice)
 library(tidyverse)
@@ -29,7 +29,7 @@ class: center, animated, bounceInDown
 
 <style>
 .title-slide {
-  background-image: url(https://fibvisiona.com/sites/default/files/inline-images/logo-upc.png);
+  background-image: url(img/upc.png);
   background-size: 300px;
 }
 </style>
