--- a/P/1/P1_exercises.Rmd
+++ b/P/1/P1_exercises.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "**Data visualization in R**<br><font color='#A8A8A8' size='5'>First steps with `ggplot2`</font><img src='https://fibvisiona.com/sites/default/files/inline-images/logo-upc.png' style='position:absolute;top:0px;left:0px;' width='20%'/>"
+title: "**Data visualization in R**<br><font color='#A8A8A8' size='5'>First steps with `ggplot2`</font><img src='img/upc.png' style='position:absolute;top:0px;left:0px;' width='20%'/>"
 author: "Your Name"
 date: "19 February 2026"
 output:
