--- a/T/2/2.Rmd
+++ b/T/2/2.Rmd
@@ -234,7 +234,7 @@ data_expr <- data %>% filter(median_expression > 0)
 library(dplyr)
 
 data_gene <- data %>%
-  filter(gene_name %in% "HLA-B")
+  filter(gene_name == "HLA-B")
 ```
 
 <div style="font-size: 60%;">
